# playlist-agent

./: .gitignore  .golangci.yml  CHANGELOG.md  Dockerfile  LICENSE  README.md  go.mod  go.sum  main.go  pyproject.toml
.github/workflows/: docker.yml  release.yml
argocd/: applicationset.yaml
charts/program-director/: Chart.yaml  README.md  values-production.yaml  values-staging.yaml  values.yaml
charts/program-director/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
cmd/: generate.go  root.go  scan.go  serve.go  sync.go  trakt.go
internal/clients/ollama/: client.go
internal/clients/radarr/: client.go
internal/clients/sonarr/: client.go
internal/clients/trakt/: client.go  client_test.go
internal/clients/tunarr/: client.go
internal/config/: config.go  config_test.go
internal/database/: database.go  postgres.go  sqlite.go
internal/database/repository/: cooldown.go  history.go  media.go
internal/scheduler/: scheduler.go  scheduler_test.go
internal/server/: handlers.go  handlers_test.go  server.go
internal/services/cooldown/: manager.go
internal/services/media/: sync.go
internal/services/playlist/: generator.go
internal/services/similarity/: scorer.go
pkg/models/: media.go  media_test.go
playlist_agent/: __init__.py  agent.py  cli.py  ersatztv_client.py  scanner.py
program_director/: __init__.py  cli.py  config.py
