[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "playlist-agent"
version = "1.0.0"
description = "AI-powered playlist generator for ErsatzTV using LangChain and Ollama"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "geekxflood" }
]
keywords = ["ersatztv", "playlist", "ai", "langchain", "ollama", "radarr", "sonarr"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "langchain>=0.3.0",
    "langchain-ollama>=0.2.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "typer>=0.12.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5.0",
    "mypy>=1.10",
]

[project.scripts]
playlist-agent = "playlist_agent.cli:app"

[project.urls]
Homepage = "https://github.com/geekxflood/playlist-agent"
Repository = "https://github.com/geekxflood/playlist-agent"
Issues = "https://github.com/geekxflood/playlist-agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["playlist_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
